--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Docker Login
+      - name: Autenticando usuario no docker
         uses: docker/login-action@v2.0.0
         with:
           username: ${{secrets.DOCKERHUB_USER}}
@@ -37,12 +37,12 @@ jobs:
     needs: [CI]
     steps:
       - uses: actions/checkout@v3
-      - name: Kubernetes Set Context
+      - name: Definindo o kuberconfig
         uses: Azure/k8s-set-context@v2
         with:
            method: kubeconfig
            kubeconfig: ${{secrets.K8S_CONFIG}}
-      - name: Deploy to Kubernetes cluster
+      - name: Realizando Deploy no Kubernetes cluster
         uses: Azure/k8s-deploy@v3.1
         with:
            images: albertoreboucas/kube-news:${{github.run_number}}
